<resources>
    <string name="Controller_disconnected">Controller disconnected</string>
    <string name="IO_error">I/O error, please try again</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="WX_APP_ID">wx17932771206f6253</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_a_note">+ Add a note</string>
    <string name="add_ringtone_text">Add ringtone</string>
    <string name="agree_text">AGREE.</string>
    <string name="alarm_sound_default">Default alarm sound</string>
    <string name="allow_softeware_update">Allow Software Update with Cellular Network</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="app_name">Navatics</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authenticated">Authenticated</string>
    <string name="authenticating">Authenticating</string>
    <string name="authentication_failed">Authentication Failed:</string>
    <string name="auto_dive_log">Automatically log every dive to record fascinating details</string>
    <string name="auto_sync_div_log">Automatically Sync Dive Log</string>
    <string name="begin_to_identify">Begin to identify</string>
    <string name="bind_device">Binding Device</string>
    <string name="bit_rate">bit_rate</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_close_flashlight_text">Turn off the flashlight</string>
    <string name="btn_open_flashlight_text">Turn on the flashlight</string>
    <string name="btn_scan_local_pic">Selection of two-dimensional codes from albums</string>
    <string name="buoy">Buoy</string>
    <string name="buoy_connected">Buoy connected</string>
    <string name="calibrate">CALIBRATE</string>
    <string name="camera_settings">Camera Settings</string>
    <string name="camera_settings_guide">Camera Settings \n\nChange Exposure Settings and Check SD Card</string>
    <string name="can_only_be_unbound_in_connection_state">Devices can only be unbound in connected state.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_multiple_selection">Please cancel multiple selection first</string>
    <string name="capture_error">Capture error</string>
    <string name="capture_success">Capture success</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_firmware_info">Checking firmware information</string>
    <string name="choose">SELECT</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="com_twitter_sdk_android_CONSUMER_SECRET">YwX4RQrEo9KDmmZi7LAqzwnFa9a9dsZbFyKP5zyBXtD730Kesg</string>
    <string name="com_twitterp_sdk_android_CONSUMER_KEY">L0LRvOWAn8Dim8cV3M9U8rm58</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compass_calibration">Compass Calibration</string>
    <string name="compass_calibration_des">Ensure the LED indicator shows calibration mode and rotate Navatics MITO 360 degree to finish the calibration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="connect">CONNECT</string>
    <string name="connected">CONNECTED</string>
    <string name="connected_device_to_unbind">You must be connected to your device to perform unbind.</string>
    <string name="connecting">CONNECTING</string>
    <string name="connecting_min">Connecting</string>
    <string name="controller_mode">Controller mode</string>
    <string name="create_private_account">Create your private account to explore.</string>
    <string name="dialog_ok">OK</string>
    <string name="email">Email</string>
    <string name="firmware_update">FIRMWARE UPDATE</string>
    <string name="gyroscope_calibration">Gyroscope Calibration</string>
    <string name="gyroscope_calibration_des">Ensure the LED indicator shows calibrating and keep Navatics MITO still to finish the calibration</string>
    <string name="mode1">Mode 1</string>
    <string name="mode2">Mode 2</string>
    <string name="mode3">Mode 3</string>
    <string name="new_password">New Password</string>
    <string name="no_firmware_information">No Firmware Information</string>
    <string name="ok">OK</string>
    <string name="parameters_settings">PARAMETERS SETTINGS</string>
    <string name="reset">RESET</string>
    <string name="save">Save</string>
    <string name="sign_in">Sign in</string>
    <string name="start">START</string>
    <string name="update">UPDATE</string>
</resources>