<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/login_bg" android:scaleType="centerCrop"/>
    <ImageView android:id="@+id/tvLogo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="56dp" android:src="@drawable/sign_logo" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/inputContainer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:layout_below="@+id/tvLogo" android:layout_centerHorizontal="true" android:animateLayoutChanges="true">
        <TextView android:textSize="14sp" android:textColor="#ffffff" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_private_account"/>
        <EditText android:id="@+id/etEmail" android:background="@drawable/login_email_box_bg" android:layout_width="310dp" android:layout_height="44dp" android:layout_marginTop="21dp" android:hint="@string/email" android:paddingStart="15dp" android:paddingEnd="15dp"/>
        <Button android:textSize="16sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/btnOK" android:background="@drawable/login_signin_btn_bg" android:layout_width="310dp" android:layout_height="44dp" android:layout_marginTop="12dp" android:text="@string/ok"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_56" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <TextView android:textSize="16sp" android:textColor="#80ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/already_have_an_account"/>
        <TextView android:textSize="16sp" android:textColor="#ff6cb0ff" android:id="@+id/txSignIn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_in" android:layout_marginStart="11dp"/>
    </LinearLayout>
    <ImageView android:id="@+id/ivBack" android:layout_width="139dp" android:layout_height="@dimen/dp_12" android:layout_marginBottom="@dimen/dp_20" android:src="@drawable/back_arrow" android:scaleType="center" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
</RelativeLayout>
