<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/dialog_common_bg" android:layout_width="@dimen/dp_264" android:layout_height="wrap_content">
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/color_000000" android:gravity="center" android:id="@+id/tv_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_25" android:layout_marginTop="@dimen/dp_19" android:layout_marginRight="@dimen/dp_26" android:layout_marginBottom="@dimen/dp_18" android:text=" Connection timeout,\10 please retry." android:lineSpacingExtra="@dimen/dp_7"/>
    <View android:background="@color/color_898989" android:layout_width="match_parent" android:layout_height="@dimen/dp_0_5"/>
    <LinearLayout android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:gravity="center" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/cancel" android:layout_weight="1"/>
        <TextView android:gravity="center" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/dialog_ok" android:layout_weight="1"/>
    </LinearLayout>
    <TextView android:textSize="@dimen/sp_18" android:textColor="@color/color_007AA8" android:gravity="center" android:id="@+id/tv_center_btn" android:paddingTop="@dimen/dp_11" android:paddingBottom="@dimen/dp_11" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ok"/>
</LinearLayout>
