<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:id="@+id/titleContainer" android:layout_width="match_parent" android:layout_height="71dp" android:layout_alignParentTop="true">
        <TextView android:textSize="14sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/firmware_update"/>
    </LinearLayout>
    <RelativeLayout android:background="@drawable/firmware_update_frag_content_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="72dp" android:layout_below="@+id/titleContainer" android:layout_marginStart="25dp" android:layout_marginEnd="25dp">
        <ScrollView android:id="@+id/scrollView" android:padding="12dp" android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <TextView android:id="@+id/tvUpdateText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_firmware_information"/>
        </ScrollView>
        <ProgressBar android:id="@+id/updateProgress" android:visibility="gone" android:layout_width="match_parent" android:layout_height="5dp" android:maxHeight="5dp" android:max="100" android:progress="30" android:progressDrawable="@drawable/progressbar_update_panel" android:minHeight="5dp" android:layout_alignParentBottom="true" style="?android:attr/progressBarStyleHorizontal"/>
    </RelativeLayout>
    <Button android:enabled="false" android:textColor="@color/white" android:id="@+id/btnUpdate" android:background="@drawable/firmware_update_btn_disable" android:layout_width="232dp" android:layout_height="36dp" android:layout_marginBottom="25dp" android:text="@string/update" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
</RelativeLayout>
