<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/login_bg" android:scaleType="centerCrop"/>
    <ImageView android:id="@+id/tvLogo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="56dp" android:src="@drawable/sign_logo" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/inputContainer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:layout_below="@+id/tvLogo" android:layout_centerHorizontal="true" android:animateLayoutChanges="true">
        <EditText android:id="@+id/etPwd1" android:background="@drawable/login_email_box_bg" android:layout_width="310dp" android:layout_height="44dp" android:layout_marginTop="21dp" android:hint="@string/new_password" android:paddingStart="15dp" android:paddingEnd="15dp"/>
        <EditText android:id="@+id/etPwd2" android:background="@drawable/login_email_box_bg" android:layout_width="310dp" android:layout_height="44dp" android:layout_marginTop="12dp" android:hint="@string/confirm_password" android:paddingStart="15dp" android:paddingEnd="15dp"/>
        <Button android:textSize="16sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/btnOK" android:background="@drawable/login_signin_btn_bg" android:layout_width="310dp" android:layout_height="44dp" android:layout_marginTop="12dp" android:text="OK"/>
    </LinearLayout>
    <TextView android:textSize="16sp" android:textColor="#ff6cb0ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="46dp" android:text="@string/cancel" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
</RelativeLayout>
