<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/gyroCaliNotiContainer" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="14sp" android:textStyle="bold" android:id="@+id/tvCaliGryoTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:text="@string/gyroscope_calibration" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/ivCaliGyroIndi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="57dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvCaliGryoTitle" app:srcCompat="@drawable/gyro_calibrate_indicator"/>
    <TextView android:gravity="center" android:id="@+id/tvCaliGyroDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="52dp" android:text="@string/gyroscope_calibration_des" android:paddingStart="15dp" android:paddingEnd="15dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/ivCaliGyroIndi"/>
    <Button android:id="@+id/btnStartCalibrateGyro" android:background="@drawable/calibrate_start_btn_bg" android:layout_width="220dp" android:layout_height="36dp" android:layout_marginTop="52dp" android:text="@string/start" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tvCaliGyroDesc"/>
</android.support.constraint.ConstraintLayout>
